# Deep-Learning

./: .gitignore  README.md  pyproject.toml
deep learning/: tensors.ipynb
dl-for-computer-vision/notebooks/: dl-for-computer-vision.ipynb
machine learning/: machine_learning.ipynb
machine learning/notebooks/: machine-learning-mastery.ipynb
pytorch/00-Crash-Course-NumPy/: 00-NumPy-Arrays.ipynb  01-NumPy-Indexing-and-Selection.ipynb  02-NumPy-Operations.ipynb  03-NumPy-Exercises.ipynb  04-NumPy-Exercises-Solutions.ipynb
pytorch/01-Crash-Course-Pandas/: 00-Intro-to-Pandas.ipynb  01-Series.ipynb  02-DataFrames.ipynb  03-Missing-Data.ipynb  04-Groupby.ipynb  05-Operations.ipynb  06-Data-Input-and-Output.ipynb  08-Pandas-Exercises-Solutions.ipynb  Excel_Sample.xlsx
pytorch/01-PyTorch-Basics/: 00-Tensor-Basics.ipynb  01-Tensor-Operations.ipynb  02-PyTorch-Basics-Exercises.ipynb  03-PyTorch-Basics-Exercises-Solutions.ipynb
pytorch/02-ANN-Artificial-Neural-Networks/: 00-PyTorch-Gradients.ipynb  01-Linear-Regression-with-PyTorch.ipynb  02-DataSets-with-Pytorch.ipynb  03-Basic-PyTorch-NN.ipynb  04a-Full-ANN-Code-Along-Regression.ipynb  04b-Full-ANN-Code-Along-Classification.ipynb  05-Neural-Network-Exercises.ipynb  06-Neural-Network-Exercises-Solutions.ipynb  07-Recap-Saving-and-Loading-Trained-Models-NO_VIDEO.ipynb
pytorch/03-CNN-Convolutional-Neural-Networks/: 00-MNIST-ANN-Code-Along.ipynb  01-MNIST-with-CNN.ipynb  02-CIFAR-CNN-Code-Along.ipynb  03-Loading-Real-Image-Data.ipynb  04-CNN-on-Custom-Images.ipynb  (+2 more)
tensorflow/: tensorflow tutorial.ipynb
(+6 files in other folders)
